--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -205,6 +205,90 @@ h3 {
 #about-lackeen > h2 {
     padding-bottom: 15px;
 }
+/*location*/
+#location {
+    text-align: center;
+    width: 100%;
+    height: 500px;
+    box-sizing: border-box;
+    position: relative;
+}
+
+#contact-text{
+color:bisque;
+    Width:50%;
+    height:450px;
+    float:left;
+    position:absolute;
+    box-sizing: border-box;
+}
+
+#contact-text ul {
+    padding-top: 5%;
+    font-size:large;
+    margin:auto;
+    list-style-type: none;
+    
+}
+
+#contact-text li {
+    padding: 20px;
+    list-style-type: none;
+}
+    
+
+#lackeen-map {
+    padding-right: 5%;
+    width: 50%;
+    float: right;
+    height: 330px;
+}
+
+#contact-text{
+    width:50%;
+    height:450px;
+    float:right;
+    position:absolute;
+    box-sizing: border-box;
+
+}
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #right-about a {
 
     color: coral;
