--- a/assets/css/lcstyle.css
+++ b/assets/css/lcstyle.css
@@ -313,7 +313,9 @@ iframe {
  #about-sm {
     height:1200px;
 }
-
+#about-sm > h2 {
+    padding-bottom: 15px;
+    }
 
 #about-sm-text {
 float: left;
@@ -324,7 +326,11 @@ max-width: 50%;
 padding-left: 30px;
 color:bisque;
 }
-
+#about-sm-text > p {
+    padding-left: 20px;
+    max-width: 95%;
+    }
+    
 
 #about-sm-image {
 float: right;
@@ -340,13 +346,10 @@ height: auto;
 width: 90%;
 }
 
-#about-sm-text > p {
-padding-left: 20px;
-max-width: 95%;
-}
 
-#about-sm > h2 {
-padding-bottom: 15px;
+.desc{
+    color:bisque;
+    text-align:center;
 }
 
 #about-sm-cover-text {
@@ -359,9 +362,15 @@ padding-bottom: 15px;
     padding-right: 50px;
     color:bisque;
     }
-    
-    
-    #about-sm-image {
+    #about-sm-cover-text > p {
+        padding-right: 50px;
+        max-width: 95%;
+        }
+        #about-sm-cover-text > p {
+            padding-right: 20px;
+            max-width: 95%;
+            }
+    #about-sm-cover-image {
     float: left;
     width: 40%;
     max-height: 600px;
@@ -375,10 +384,7 @@ padding-bottom: 15px;
     width: 90%;
     }
     
-    #about-sm-cover-text > p {
-    padding-right: 20px;
-    max-width: 95%;
-    }
+    
     
    
     
@@ -429,16 +435,6 @@ padding-bottom: 15px;
 .zoom:hover {
     transform: scale(1.1);
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
